Changelog:
4.0.0 to
- Data file updates
  - Action 0 objects properties 11..16.
  - Action 2 objects variables 42, 44..46, 5F, 60..64.
  - Action 2 callbacks 157..15D.
  - Action 5 type 15.
  - Action D patch variables 12, 13.
- Add command line option to silence all progress output.
- Add support for reading the (Action 14) version of other NewGRFs via Action D
  parameter 7E.
- Fix bogus warning when using \d<num> in an action 2 for features 7/9/F.
- Fix Cygwin compilation issues.
- Fix returning a non-zero exit code upon an unrecognised command line option.
- Fix UPX-ing of release binaries under some circumstances.
- (devel) Fix putting version.def twice in the source bundle.
- (devel) Use directories from the Make conventions for installation
  directories and add a few "parameters" to disable installation of
  certain bits of documentation.
- (devel) Disable strip and UPX as default.
- (devel) Add make distclean that removes Makefile.local as well.

v3.4.6 to 4.0.0
- Change rename "renum" to "nforenum" including ".renum" to ."nforenum"
  so the name is less generic and the same as in several downstreams.
  You might need to update your development environment / build scripts.
- (devel) Complete rewrite of installation of binaries, so if you are
  packaging this you will have to check whether custom installation and
  such are still needed or that the Makefile does handle it correctly.
- Data file updates:
  - Enable actions 1..3 for airports, newobjects, railtypes and airport tiles.
  - Action 0 train prop 1A (change to extended byte).
  - Action 0 road vehicle prop 20,
  - Action 0 ship prop 1B.
  - Action 0 plane prop 1B.
  - Action 0 general variable properties 08, 11, 12.
  - Action 0 house props 21..22.
  - Action 0 bridge props 00, 10..13.
  - Action 0 airport properties 08..0A, 0C..10.
  - Action 0 object properties 0B..10.
  - Action 0 railtype properties 08..16.
  - Action 0 airport tile properties 08, 09, 0E..11.
  - Action 2 operators 14, 15, 16